...
                android:clipToPadding="false"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp"
                app:layout_scrollFlags="scroll|snap|enterAlways">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_search"
                    style="@style/SearchEditText"
                    android:afterTextChanged="@{() -> viewModel.onSearchTermChange()}"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="true"
                    android:onEditorAction="@{(view, actionId, event) -> fragment.onImeSearchClick(view, actionId, event)}"
                    android:text="@={viewModel.locationToBeSearched}" />

            </com.google.android.material.card.MaterialCardView>

            <HorizontalScrollView
                android:id="@+id/scroll_view_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:scrollbars="none">

...
