<resources>
    <string name="app_name">NearbyPlaces</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="detail_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="search_hint">Type an address</string>

    <string name="lorem_ipsum"></string>
    <string name="search">Search</string>
    <string name="search_fragment">Search</string>
    <string name="results_for">Results for</string>
    <string name="distance">%.0fm away</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="search_term_is_too_short">Search term is too short</string>
    <string name="invalid_input">Invalid input</string>
    <string name="network_error">Can\'t connect to network</string>
    <string name="server_error">Server Error</string>
    <string name="try_again">Try again</string>
    <string name="no_places_found">No places found</string>
    <string name="empty">Empty</string>
    <string name="success">Success</string>
    <string name="unknown_error">Unknown Error</string>

</resources>